--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,29 @@
-language: objective-c
-
-before_install:
-  - gem install xcpretty
-  - gem install cocoapods -v '1.2.1'
-  - pod repo update
-
-osx_image: xcode9
-
+---
+os: osx
+osx_image: xcode12.3
+language: shell
 cache: cocoapods
 
-env:
-  global:
-    - WORKSPACE=GEOSwiftMapboxGL.xcworkspace
-    - SCHEME=GEOSwiftMapboxGL
-    - SDK=iphonesimulator11.0
-  matrix:
-    # - DESTINATION="OS=10.3,name=iPhone 6"
-    - DESTINATION="OS=11.0,name=iPhone 6"
-    # - DESTINATION="OS=8.3,name=iPhone 6"
+before_install:
+  - brew upgrade swiftlint
+  - gem install xcpretty cocoapods
+  - echo "machine api.mapbox.com
+      login mapbox
+      password $MAPBOX_SDK_REGISTRY_TOKEN" > ~/.netrc
+  - pod repo update
+  - pod install
 
 script:
   - set -o pipefail
-  - xcodebuild -version
-  - xcodebuild -showsdks
-
+  - swiftlint
   - xcodebuild
-    -workspace "$WORKSPACE"
-    -scheme "$SCHEME"
-    -sdk "$SDK"
-    -destination "$DESTINATION"
+    -workspace GEOSwiftMapboxGL.xcworkspace
+    -scheme GEOSwiftMapboxGL
+    -sdk iphonesimulator14.3
+    -destination "platform=iOS Simulator,OS=14.3,name=iPhone 11"
     -configuration Debug
     ONLY_ACTIVE_ARCH=YES
     clean test | xcpretty -c;
 
-  - xcodebuild
-    -workspace "$WORKSPACE"
-    -scheme "$SCHEME"
-    -sdk "$SDK"
-    -destination "$DESTINATION"
-    -configuration Release
-    ONLY_ACTIVE_ARCH=YES
-    ENABLE_TESTABILITY=YES
-    clean test | xcpretty -c;
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -J '^GEOSwiftMapboxGL$';
