--- a/GEOSwiftMapboxGL.xcodeproj/xcshareddata/xcschemes/GEOSwiftMapboxGL.xcscheme
+++ b/GEOSwiftMapboxGL.xcodeproj/xcshareddata/xcschemes/GEOSwiftMapboxGL.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0830"
+   LastUpgradeVersion = "1230"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -26,7 +26,27 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CD2299831B10B506002C19AE"
+            BuildableName = "GEOSwiftMapboxGL.framework"
+            BlueprintName = "GEOSwiftMapboxGL"
+            ReferencedContainer = "container:GEOSwiftMapboxGL.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CD2299831B10B506002C19AE"
+            BuildableName = "GEOSwiftMapboxGL.framework"
+            BlueprintName = "GEOSwiftMapboxGL"
+            ReferencedContainer = "container:GEOSwiftMapboxGL.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -39,17 +59,6 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CD2299831B10B506002C19AE"
-            BuildableName = "GEOSwiftMapboxGL.framework"
-            BlueprintName = "GEOSwiftMapboxGL"
-            ReferencedContainer = "container:GEOSwiftMapboxGL.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -70,8 +79,6 @@
             ReferencedContainer = "container:GEOSwiftMapboxGL.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
