--- a/GEOSwiftMapboxGL.xcodeproj/xcshareddata/xcschemes/GEOSwiftMapboxGL.xcscheme
+++ b/GEOSwiftMapboxGL.xcodeproj/xcshareddata/xcschemes/GEOSwiftMapboxGL.xcscheme
@@ -26,7 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -36,6 +38,15 @@
             ReferencedContainer = "container:GEOSwiftMapboxGL.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CD2299831B10B506002C19AE"
+            BuildableName = "GEOSwiftMapboxGL.framework"
+            BlueprintName = "GEOSwiftMapboxGL"
+            ReferencedContainer = "container:GEOSwiftMapboxGL.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
