--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,19 @@
-language: objective-c
-
-before_install:
-  - gem install xcpretty
-  - gem install cocoapods -v '1.2.1'
-  - pod repo update
-
-osx_image: xcode9
-
+---
+os: osx
+osx_image: xcode11.3
+language: minimal
 cache: cocoapods
-
-env:
-  global:
-    - WORKSPACE=GEOSwiftMapboxGL.xcworkspace
-    - SCHEME=GEOSwiftMapboxGL
-    - SDK=iphonesimulator11.0
-  matrix:
-    # - DESTINATION="OS=10.3,name=iPhone 6"
-    - DESTINATION="OS=11.0,name=iPhone 6"
-    # - DESTINATION="OS=8.3,name=iPhone 6"
+env: WORKSPACE=GEOSwiftMapboxGL.xcworkspace
+     SCHEME=GEOSwiftMapboxGL
+     SDK=iphonesimulator13.2
+     DESTINATION="platform=iOS Simulator,OS=13.3,name=iPhone 11"
+before_install:
+  - brew upgrade swiftlint
+  - gem install xcpretty cocoapods
+  - pod repo update
+  - pod install
 
 script:
-  - set -o pipefail
-  - xcodebuild -version
-  - xcodebuild -showsdks
-
   - xcodebuild
     -workspace "$WORKSPACE"
     -scheme "$SCHEME"
@@ -33,12 +23,5 @@ script:
     ONLY_ACTIVE_ARCH=YES
     clean test | xcpretty -c;
 
-  - xcodebuild
-    -workspace "$WORKSPACE"
-    -scheme "$SCHEME"
-    -sdk "$SDK"
-    -destination "$DESTINATION"
-    -configuration Release
-    ONLY_ACTIVE_ARCH=YES
-    ENABLE_TESTABILITY=YES
-    clean test | xcpretty -c;
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -J '^GEOSwiftMapboxGL$';
