--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - pod install
 
 script:
+  - set -o pipefail
   - xcodebuild
     -workspace "$WORKSPACE"
     -scheme "$SCHEME"
