Use language: shell instead of alias minimal to avoid Travis message

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 os: osx
 osx_image: xcode12.2
-language: minimal
+language: shell
 cache: cocoapods
 env: WORKSPACE=GEOSwiftMapboxGL.xcworkspace
      SCHEME=GEOSwiftMapboxGL
